# qserde

./: .gitignore  Cargo.toml  LICENSE  readme.md
src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
